methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:3: error: not found: value ligneFleur
  ligneFleur(Color.red,Color.cyan)
  ^FlowerCase:10: error: not found: value ligneFleur
  ligneFleur(Color.pink,Color.green)
  ^